--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ tiles-count: 10
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
-  Mastodon: https://astrodon.social/@IDF_Planets
+  Mastodon: https://solarsystem.social/@IDF_Planets
   Matrix: https://matrix.to/#/#IDF-Planets:matrix.org
   GitHub: https://github.com/idf-planets
   Email: mailto:&#105;&#100;&#102;&#45;&#112;&#108;&#97;&#110;&#101;&#116;&#115;&#46;&#107;&#57;&#48;&#53;&#105;&#64;&#97;&#108;&#101;&#101;&#97;&#115;&#46;&#99;&#111;&#109;
