--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ socials:
   Mastodon: https://solarsystem.social/@IDF_Planets
   Matrix: https://matrix.to/#/#IDF-Planets:matrix.org
   GitHub: https://github.com/idf-planets
-  Email: mailto:&#105;&#100;&#102;&#45;&#112;&#108;&#97;&#110;&#101;&#116;&#115;&#46;&#107;&#57;&#48;&#53;&#105;&#64;&#97;&#108;&#101;&#101;&#97;&#115;&#46;&#99;&#111;&#109;
+  Email: mailto:&#109;&#97;&#114;&#107;&#46;&#119;&#105;&#101;&#99;&#122;&#111;&#114;&#101;&#107;&#64;&#105;&#112;&#103;&#112;&#46;&#102;&#114;
   GitLab:
   Instagram:
   LinkedIn:
